--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -1410,6 +1410,31 @@ a.ui-view,.template-content a{
         background: rgba(93, 174, 235, 0.2);
     }
     
+    span.lbl-txt {
+        font-size: 16px;
+        padding: 5px 0;
+    }
+
+
+
+    .boolean-field, .tag-cloud-container {
+        margin: 5px;
+        margin-bottom: 15px;
+        display: block;
+    }
+    
+    .uitext-container {
+        margin-bottom: 15px;
+    }
+    
+    .file-browse-btn.combined-browser{
+        
+    }
+    
+    .file-browse-btn.combined-browser:after {
+        content: "Add Photos";
+    }
+    
     
 }
 
