administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -1436,6 +1436,37 @@ a.ui-view,.template-content a{
     }
     
     
+    .full-overlay .file-browse-btn.combined-browser, .full-overlay .tag-cloud span.tag-el {
+        border: none;
+        padding: 10px 20px;
+        font-size: 16.5px;
+        margin: 5px;
+        background-color: mediumaquamarine;
+        border-radius: 3px;
+        box-shadow: 0 0 8px rgb(0 0 0 / 30%);
+        transition: background-color 0.3s, box-shadow 0.3s;
+        &:hover{
+            background-color: darken(mediumaquamarine, 10%);
+        }
+    }
+    
+    .full-overlay .tag-cloud span.tag-el {
+        background-color: #d9d9d9;
+        box-shadow: none;
+        &:hover{
+            background-color: darken(#d9d9d9, 10%);
+        }
+    }
+    
+    .full-overlay .tag-cloud span.tag-el.selected {
+        background-color: #03A9F4;
+        box-shadow: 0 0 8px rgb(0 0 0 / 30%);
+         &:hover{
+            background-color: darken(#03A9F4, 10%);
+        }
+    }
+    
+    
 }
 
 
