--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -153,7 +153,7 @@ $introTextColor:#4d8673;
         }
         
         
-        .menu-item-link {
+        .menu-item-link,  .menu-item-link .clickable a {
             background-color: #2096f3;
             color:white;
             text-shadow: 0 0 2px #00000052;
@@ -167,6 +167,11 @@ $introTextColor:#4d8673;
                     background-color: darken(mediumaquamarine, 10%);
                 }
             }
+        }
+        
+        .menu-item-link.expand{
+            background-color: transparent;
+            box-shadow: none;
         }
         
         
