administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -111,9 +111,7 @@ $introTextColor:#4d8673;
 .ui-view.page-banner .ui-list-view.banner-btns, .target-story [data-view="storyPageContent"] .story-btns {
     
     
-    .menu-item-link .clickable a{
-        display:none;
-    }
+    
     
     
     .ui-view, .menu-item-link .clickable a {
@@ -141,6 +139,10 @@ $introTextColor:#4d8673;
                 }
             }
         }
+        
+    .menu-item-link .clickable a{
+        display:none;
+    }
     
     
 }
@@ -171,15 +173,15 @@ $introTextColor:#4d8673;
             }
         }
         
-        .menu-item-link.expand{
+        .menu-item-link.expand.active{
             background-color: transparent;
             box-shadow: none;
             
-             &active .clickable p{
+            .clickable p{
                 display:none;
-             }
+            }
             
-            &active .clickable a{
+            .clickable a{
                 display:inline-block;
             }
             
