--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -142,6 +142,8 @@ $introTextColor:#4d8673;
         
     .menu-item-link .clickable a{
         display:none;
+        margin-bottom: 0;
+        margin-top: 0;
     }
     
     
