--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -1544,6 +1544,22 @@ a.ui-view,.template-content a{
     }
     
     
+     a.pb-btn-close {
+        position: fixed;
+        top: 100px;
+        right: 100px;
+        background-image: unset;
+        background-color: transparent;
+    }
+    
+    a.pb-btn-close:after {
+        content: "\0f00d";
+        color: white;
+        font-family: 'FontAwesome';
+        font-size: 50px;
+    }
+    
+    
 }
 
 
