administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -1634,7 +1634,7 @@ a.ui-view,.template-content a{
     
     
     
-    .ui-view.new-empty-item {
+    .ui-view.new-empty-item.never-focused {
         
         padding: 10px 20px;
         background-color: mediumaquamarine;
