administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -1197,7 +1197,7 @@ button.inline-edit {
             
             
             
-            .empty-story {
+            &.empty-story {
                 background-color: white;
                 font-weight: 400;
                 font-size: 30px;
