administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -1540,7 +1540,8 @@ a.ui-view,.template-content a{
         }
     }
     
-    [data-view="createStoryForm"], [data-view="profileFormView"] {
+    [data-view="createStoryForm"], [data-view="profileFormView"],
+    [data-view="publishingOptionsForm"], [data-view="createBirthStoryForm"], [data-view="createRepatriationStoryForm"]{
         padding: 40px;
         background: rgba(0,0,0,0.03);
         margin: 10px;
