administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -40,6 +40,11 @@ $introTextColor:#4d8673;
             background-color: rgba(0,0,0,0.2);
             transition: background-color .2s;
         }
+        
+        
+        &.hidden{
+            display: none;
+        }
     }
     
     
