administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -88,8 +88,9 @@ $introTextColor:#4d8673;
                 margin-top: 5px;
                 &.hidden{
                     display:none;
+                }
+                
             }
-            
         }
 
     }
