administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -78,6 +78,7 @@ $introTextColor:#4d8673;
             &:before {
                 left: 35px;
                 position: relative;
+                color:black;
             }
             
             
