--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -17,7 +17,7 @@ $introTextColor:#4d8673;
     right: 100px;    
 
 
-    .ui-view.menu-item-link, &:after {
+    .ui-view.menu-item-link, &:before {
         
         height: 30px;
         line-height: 30px;
@@ -64,7 +64,7 @@ $introTextColor:#4d8673;
         right: 10px;
         
         
-        &:after {
+        &:before {
             content: "Menu"; 
             color: white;
         }
@@ -75,7 +75,7 @@ $introTextColor:#4d8673;
         
         &:hover, &.active{
             
-            &:after {
+            &:before {
                 left: 35px;
                 position: relative;
                 color:black;
