--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -1889,7 +1889,9 @@ a.ui-view,.template-content a{
     
     }
     
-    
+    .uploads-hidden .media-bar.tabs-bottom {
+        display: none;
+    }
     
     .media-item .image {
         display: inline-block;
