--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -1893,16 +1893,51 @@ a.ui-view,.template-content a{
         display: none;
     }
     
-    .media-item .image {
-        display: inline-block;
-        width: 200px;
-        height: 200px;
-        background-size: cover;
-        overflow: hidden;
-        box-shadow: 0 0 3px rgb(0 0 0 / 50%);
-        border-radius: 4px;
-        margin-right: 20px;
-        margin-top: 20px;
+    .media-item{
+        
+         .image {
+            display: inline-block;
+            width: 200px;
+            height: 200px;
+            background-size: cover;
+            overflow: hidden;
+            box-shadow: 0 0 3px rgb(0 0 0 / 50%);
+            border-radius: 4px;
+            margin-right: 20px;
+            margin-top: 20px;
+            border: 3px solid white;
+            transform: rotate(4deg);
+        }
+        
+        .remove-btn{
+        
+            &:after {
+                content: "\0f00d";
+                font-family: 'FontAwesome';
+                cursor: pointer;
+                position: absolute;
+                bottom: 18px;
+                right: 25px;
+                color: white;
+                background: black;
+                width: 20px;
+                height: 20px;
+                text-align: center;
+                border-radius: 100%;
+                font-size: 14px;
+                line-height: 20px;
+                box-shadow: 0 0 3px #00000080;
+                opacity: 0.5;
+                transition: opacity .8s;
+                    
+            }
+            
+            &:hovewr:after{
+                opacity: 0.5;
+                transition: opacity .2s;
+            }
+        }
+        
     }
     
     
