administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -1895,7 +1895,10 @@ a.ui-view,.template-content a{
     
     .media-item{
         
-         .image {
+        position:relative;
+        display:inline-block;
+        
+        .image {
             display: inline-block;
             width: 200px;
             height: 200px;
