--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -1935,10 +1935,12 @@ a.ui-view,.template-content a{
                     
             }
             
-            &:hover:after{
-                opacity: 0.5;
-                transition: opacity .2s;
-            }
+            
+        }
+        
+        .media-item:hover .remove-btn:after{
+            opacity: 0.5;
+            transition: opacity .2s;
         }
         
     }
