--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -1912,6 +1912,16 @@ a.ui-view,.template-content a{
             transform: rotate(4deg);
         }
         
+        &:nth-of-type(2) .image {
+            transform: rotate(-2deg) translate(0, 13px) scale(0.95);
+        }
+        &:nth-of-type(3) .image {
+            transform: rotate(2deg) translate(0, -5px) scale(1);
+        }
+        &:nth-of-type(4) .image {
+            transform: rotate(-2deg) translate(0, -5px) scale(0.9);
+        }
+        
         .remove-btn{
         
             &:after {
