--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -1898,7 +1898,7 @@ a.ui-view,.template-content a{
         position:relative;
         display:inline-block;
         
-        .image {
+        .image, .external {
             display: inline-block;
             width: 200px;
             height: 200px;
@@ -1912,15 +1912,15 @@ a.ui-view,.template-content a{
             transform: rotate(4deg);
         }
         
-        &:nth-of-type(2) .image {
+        &:nth-of-type(2){  .image, .external {
             transform: rotate(-2deg) translate(0, 13px) scale(0.95);
-        }
-        &:nth-of-type(3) .image {
+        }}
+        &:nth-of-type(3){  .image, .external {
             transform: rotate(2deg) translate(0, -5px) scale(1);
-        }
-        &:nth-of-type(4) .image {
+        }}
+        &:nth-of-type(4){  .image, .external {
             transform: rotate(-2deg) translate(0, -5px) scale(0.9);
-        }
+        }}
         
         .remove-btn{
         
