--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -1903,6 +1903,7 @@ a.ui-view,.template-content a{
             width: 200px;
             height: 200px;
             background-size: cover;
+            background-position: center;
             overflow: hidden;
             box-shadow: 0 0 3px rgb(0 0 0 / 50%);
             border-radius: 4px;
