--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -1920,6 +1920,13 @@ a.ui-view,.template-content a{
             }
         }
         
+         &:nth-of-type(1){  .image, .external {
+           
+            &:hover{
+                transform: rotate(3deg) scale(1.05);
+            }
+        }}
+        
         &:nth-of-type(2){  .image, .external {
             transform: rotate(-2deg) translate(0, 13px) scale(0.95);
             &:hover{
