administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -1977,6 +1977,21 @@ a.ui-view,.template-content a{
             transition: opacity .2s;
         }
         
+        
+        .external.youtube:after {
+            content: "\0f16a";
+            font-family: 'FontAwesome';
+            color: red;
+            position: absolute;
+            left: 20px;
+            top: 20px;
+            font-size: 41px;
+            filter: grayscale(0.5);
+            &:hover{
+                 filter: grayscale(0);
+            }
+        }
+        
     }
     
     
