--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -1921,25 +1921,24 @@ a.ui-view,.template-content a{
         }
         
          &:nth-of-type(1){  .image, .external {
-           
             &:hover{
                 transform: rotate(3deg) scale(1.05);
             }
         }}
         
-        &:nth-of-type(2){  .image, .external {
+        &:nth-of-type(4n+2){  .image, .external {
             transform: rotate(-2deg) translate(0, 13px) scale(0.95);
             &:hover{
                 transform: rotate(-1deg) translate(0, 13px) scale(1);
             }
         }}
-        &:nth-of-type(3){  .image, .external {
+        &:nth-of-type(4n+3){  .image, .external {
             transform: rotate(2deg) translate(0, -5px) scale(1);
             &:hover{
                 transform: rotate(1deg) translate(0, -5px) scale(1.05);
             }
         }}
-        &:nth-of-type(4){  .image, .external {
+        &:nth-of-type(4n+4){  .image, .external {
             transform: rotate(-2deg) translate(0, -5px) scale(0.9);
             &:hover{
                 transform: rotate(-1deg) translate(0, -5px) scale(0.95);
