--- a/app/homeStyle.customCSS.css
+++ b/app/homeStyle.customCSS.css
@@ -1780,7 +1780,17 @@ a.ui-view,.template-content a{
     }
     
     .file-browse-btn.combined-browser.add-youtube:after {
-        content: "Add Youtube";
+        content: "Add Youtube Video";
+    }
+    
+    
+    .add-youtube.combined-browser.file-browse-btn {
+        background-color: #f45a77;
+        color: white;
+        text-shadow: 0 0 3px #00000094;
+        &:hover{
+            background-color: darken(#f45a77, 10%);
+        }
     }
     
     
